--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,6 +1,10 @@
+/* Utilities */
+.italic {
+    font-style: italic;
+}
+
 /* Headings */
 h2 {
-    /* margin-top: 2rem; */
     font-weight: 500;
     font-size: 2rem;
     line-height: 3rem;
@@ -10,11 +14,9 @@ h3 {
     font-weight: 500;
 }
 
-
+/* Paragraphs */
 p {
-    /* margin: 1.5rem 0 1rem 0; */
     font-weight: 100;
-    /* font-size: 1.25rem; */
     line-height: 2.25rem;
 }
 
@@ -24,11 +26,13 @@ textarea {
     padding: 0.625rem;
 }
 
+/* Links */
 a {
     font-weight: 300;
     text-decoration: none;
 }
 
+/* Icons */
 .little-icon {
     margin-right: 1rem;
 }
@@ -37,12 +41,8 @@ a {
     margin-left: 1rem;
 }
 
-
+/* Footer */
 .footer-text {
     font-weight: 100;
     font-size: 0.75rem;
-}
-
-.italic {
-    font-style: italic;
 }
